[gd_scene load_steps=19 format=2]

[ext_resource path="res://Misc/Explosion.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprite Sheets/jrob774-explosion_2-sheet-alpha.png" type="Texture" id=2]
[ext_resource path="res://assets/Sounds/Explosion SFX/Magic_Explosion_Short19.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 192, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 288, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 384, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 480, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 576, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 672, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 768, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 864, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 960, 104, 96, 96 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 1056, 104, 96, 96 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=14]
radius = 48.9562

[sub_resource type="CircleShape2D" id=15]
radius = 245.39

[node name="Explosion" type="Area2D"]
collision_mask = 14
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
speed_scale = 2.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 14 )

[node name="ShakeArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShakeArea"]
light_mask = 0
shape = SubResource( 15 )

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -9.0
autoplay = true

[connection signal="body_entered" from="ShakeArea" to="." method="_on_ShakeArea_player_entered"]
